--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -715,7 +715,7 @@ hr{
   border-radius: 5px;
   padding-bottom: 10px;
   opacity: 0;
-    transition: opacity 1.5s;
+  transition: opacity 1.5s;
 }
 /*@keyframes fadeIn {
   from {
@@ -749,13 +749,100 @@ hr{
   background-color: rgb(13, 67, 115);
   color: white;
 }
-/*test*/
+/*test-------------------------------------*/
 .header-overlay{
+  
   position: relative;
-  overflow: hidden;
+  display: inline-block;
+  width: 100%;
+  height:30%;
+  
 }
 
-.port{
+.image{
+  display: block;
+  width: 100%;
+  height: 100%;
+  
+  
+}
+.overlay{
+  position: absolute;
+  transition: all .3s ease;
+  opacity: 0;
+  /*background: radial-gradient(#13121246, #17171852);*/ 
+
+}
+.header-overlay:hover .overlay{
+  opacity: 1;
+}
+.img-text{
+  color: rgb(252, 249, 249);
+  font-family: sans-serif;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  font-size: 20px;
+}
+/*.overlayLeft{
+  height: 100%;
+  width: 0;
+  top: 0;
+  left: 0;
+  background: radial-gradient(#13121246, #17171852);
+}
+
+.overlayRight{
+  height: 100%;
+  width: 0;
+  top: 0;
+  right: 0;
+  background: radial-gradient(#13121246, #17171852);
+}
+.container:hover .overlayLeft,.container:hover .overlayRight{
+  width: 75%;
+}
+.overlayTop{
+  width: 100%;
+  height: 0;
+  top: 0;
+  left: 0;
+  background: radial-gradient(#13121246, #17171852);
+}*/
+.overlayBottom{
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  left: 0;
+  background: radial-gradient(#131212a2, #171718a4);
+}
+.header-overlay:hover .overlayBottom{
+  height: 25%;
+}
+
+/*.overlayCross{
+  width: 0;
+  height: 0;
+  top: 0;
+  left: 0;
+  background: radial-gradient(#817d7dc0, #09099625);
+}
+.header-overlay:hover .overlayCross{
+  width: 70%;
+  height: 70%;
+}
+/*
+.overlayFade{
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: radial-gradient(#13121246, #17171852);
+
+}*/
+
+/*.port{
   -webkit-transition: all 15s;
   -moz-transition: all 15s;
   -o-transition: all 15s;
@@ -781,6 +868,8 @@ hr{
   -moz-transition: all .5s ease-out;
   -o-transition: all .5s ease-out;
   transition: all .5s ease-out;
+
+  
   
   
 
@@ -802,4 +891,4 @@ hr{
   -ms-transform: scale(0.9);
   -o-transform: scale(0.9);
   transform: scale(0.9);
-}
+}*/
